initialize scripts for mainjs

--- a/index.html
+++ b/index.html
@@ -13,19 +13,21 @@
         <div class="row">
             <div class="row-left">
                 <h1>Slural Pright</h1>
-                <div id="form-box">
-                    <i class="fas fa-arrow-left" id="prevBtn"></i>
-                    <i class="fas fa-arrow-right" id="nextBtn"></i>
-                    <div id="input-group">
-                        <input id="input-control" required>
-                        <label id="label-control">Enter Your Username</label>
-                        <div id="input-progress"></div>
-                    </div>
-                    <div id="progress-bar"></div>
+                <div>
+                        <div id="form-box">
+                                <i class="fas fa-arrow-left" id="prevBtn"></i>
+                                <i class="fas fa-arrow-right" id="nextBtn"></i>
+                                <div id="input-group">
+                                    <input id="input-control" required>
+                                    <label id="label-control"></label>
+                                    <div id="input-progress"></div>
+                                </div>
+                                <div id="progress-bar"></div>
+                            </div>
                 </div>
                 <div class="optional-link">
                     <a href="#">Forgot password?</a>
-                    <a href="#">Signin with company or school</a>
+                    <a href="#">Sign in with company or school</a>
                 </div>
                 <div class="or">
                     <hr>
@@ -44,5 +46,7 @@
             </div>
         </div>
     </div>
+
+    <script src="js/main.js"></script>
 </body>
 </html>
